# slot-graph-scheduler

./: README.md  app.py  graph_manager.py  main.py  mock_client.py  pyproject.toml  slots.py  state_machine.py  test_client.py
scripts/: test_client.py
src/: __init__.py  app.py  graph_manager.py  main.py  slots.py
tests/: test_app.py  test_graph_manager.py  test_integration.py
